@@ -1,6 +1,9 @@
 2008-09-03  Satoshi Konno <skonno@cybergarage.org>
-	* Added cg_xml_node_copy().
+	* Changed to include <TargetConditionals.h> on XCode as default.
+	* Enabled SO_REUSEPORT in cg_socket_setreuseaddress() on MacOSX and iPhone platforms.
+	* Disabled signal in cg_thread_stop_with_cond() on MacOSX and iPhone platforms.
 	* Enabled libxml2 as default using TARGET_OS_IPHONE macro on iPhone and iPhone-Simulator.
+	* Added cg_xml_node_copy().
 
 2008-08-21  Satoshi Konno <skonno@cybergarage.org>
 	* Fixed some warnings using GCC v4.0.1.
